--- a/config/urchin.conf
+++ b/config/urchin.conf
@@ -19,13 +19,11 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 # CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
 
 # --- DISPLAY SETTINGS ---
-
 # enable display
-#CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY=y
 # custom status screen (nice-view-gem)
-#CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 # turn off gem animation to save battery
 CONFIG_NICE_VIEW_GEM_ANIMATION=n
-#CONFIG_NICE_VIEW_GEM_ANIMATION_MS=960
 
 # source: https://github.com/M165437/nice-view-gem/blob/main/README.md
